# ragproof

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ragproof/: __init__.py  cli.py  cost.py  dashboard.py  datasets.py  demo.py  drift.py  embeddings.py  eval_runner.py  generation.py  metrics.py  retrievers.py  retrievers_pgvector_claude.py
ragproof/benchmarks/: __init__.py  beir.py  scifact.py  syllabus.py
tests/: test_cli.py  test_cost.py  test_drift.py  test_eval_runner.py  test_generation.py  test_metrics.py  test_retrievers.py
